# k1core-test

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  supervisord.conf
services/: docker-compose.yaml
services/postgres/: postgres.yaml
services/redis/: redis.yaml
src/currency/: apps.py  exceptions.py  models.py  tasks.py
src/currency/config/: db.py
src/currency/db_router/: currency.py
src/currency/dto/: block.py
src/currency/management/commands/: start_periodic_tasks.py
src/currency/migrations/: 0001_initial.py  0002_init_data.py  0003_fix_names.py  0004_alter_currency_name_alter_provider_name.py
src/currency/routers/block/: controller.py  router.py
src/currency/routers/currency/: controller.py  router.py
src/currency/routers/provider/: controller.py  router.py
src/currency/schemas/: block.py  currency.py  provider.py
src/currency/services/block_chair/: servicer.py
src/django_app/: asgi.py  celery.py  settings.py
src/django_app/config/: db.py
