[project]
name = "k1core-test"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4.0",
    "django==5.1.5",
    "django-celery-beat>=2.7.0",
    "django-celery-results>=2.5.1",
    "fastapi==0.115.8",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.7.1",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "ruff>=0.9.6",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
    "whitenoise>=6.9.0",
]
